--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#33ee33" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Corben:700|Ubuntu+Mono&display=swap" rel="stylesheet">
-    <title>Curse Words Web Portal</title>
+    <title>Curse Words Web Portal!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app ya fookin' dingus.</noscript>
