Hide more info if # url

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <title>Curse Words Web Portal!</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app ya fookin' dingus.</noscript>
+    <noscript>What is this, the 20th century? Maybe after browsing geocities and updating your AIM status to your favorite Bad Religion quote (probably using some archaic word that you still haven't bothered to look up), you'll pop on by Blockbuster to checkout that new Jim Carrey movie where he is trapped in a bubble on TV. I mean, it is pretty incredible. It's similar to how you are trapped in a bubble where javascript is not used by EVERY FUCKING WEBSITE EVER!</noscript>
     <main id="root"></main>
   </body>
 </html>
