Adds game, fixes bugs, cleans up styling

--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,40 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56742354-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-56742354-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-56742354-1');
+      gtag("config", "UA-56742354-1");
     </script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#33ee33" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Corben:700|Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=VT323&display=swap"
+      rel="stylesheet"
+    />
     <title>Curse Words Web Portal!</title>
   </head>
   <body>
-    <noscript>What is this, the 20th century? Maybe after browsing geocities and updating your AIM status to your favorite Bad Religion quote (probably using some archaic word that you still haven't bothered to look up), you'll pop on by Blockbuster to checkout that new Jim Carrey movie where he is trapped in a bubble on TV. I mean, it is pretty incredible. It's similar to how you are trapped in a bubble where javascript is not used by EVERY FUCKING WEBSITE EVER!</noscript>
+    <noscript
+      >What is this, the 20th century? Maybe after browsing geocities and
+      updating your AIM status to your favorite Bad Religion quote (probably
+      using some archaic word that you still haven't bothered to look up),
+      you'll pop on by Blockbuster to checkout that new Jim Carrey movie where
+      he is trapped in a bubble on TV. I mean, it is pretty incredible. It's
+      similar to how you are trapped in a bubble where javascript is not used by
+      EVERY FUCKING WEBSITE EVER!</noscript
+    >
     <main id="root"></main>
   </body>
 </html>
