adds a ton of stuff tothe game, labyrinth, fight scene and plot

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#33ee33" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css?family=VT323&display=swap"
+      href="https://fonts.googleapis.com/css?family=VT323&display=swap&family=Source+Sans+Pro:wght@300"
       rel="stylesheet"
     />
     <title>Curse Words Web Portal!</title>
