--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       href="https://fonts.googleapis.com/css?family=VT323&display=swap&family=Source+Sans+Pro:wght@300"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Curse Words Web Portal!</title>
   </head>
   <body>
